--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,14 @@
   --bg-button: #32CD32;  
 }
 
-body {
-            margin: 0;
+* {
+  margin: 0;
             padding: 0;
+  cursor: pointer;
+}
+
+body {
+            
             display: flex;
             justify-content: center;
             align-items: center;
@@ -250,6 +255,16 @@ body {
   letter-spacing: 1px;
 }
 
+#startBtn {
+  animation: startAnim infinite 2000ms ease-in-out;
+}
+#startBtn, #shopBtn {
+  transition: transform 200ms ease-in-out;
+}
+#startBtn:hover, #shopBtn:hover {
+  transform: scale(0.9);
+}
+
 
 
 #settingsBtn {
@@ -314,14 +329,14 @@ body {
 #shopOverlay {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(30,40,60,0.85);
+  background: rgba(78, 108, 170, 0.85);
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 40;
 }
 #shopBox {
-  background: #fff;
+  background: rgba(21, 27, 24, 0);
   border-radius: 18px;
   padding: 40px 32px 32px 32px;
   box-shadow: 0 8px 32px rgba(0,0,0,0.25);
@@ -332,8 +347,8 @@ body {
 }
 #shopBox h2 {
   margin-bottom: 18px;
-  color: #0db704;
-  font-size: 3em;
+  color: #d9dcd9;
+  font-size: 3.5em;
   font-family: 'VT323', cursive;
 }
 .shop-coins {
@@ -417,6 +432,19 @@ body {
   }
   50% {
     transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+
+}
+@keyframes startAnim {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
   }
 
   100% {
